PL/Projecto/tests/good/4.nx
type pair = (int * int);

var coordinates : pair = 2, 3;
