PL/Projecto/tests/bad/6.nx
type a = ((int * int) * int);

var x : a = 2;
